--- a/Save Those Princesses/Packages/manifest.json
+++ b/Save Those Princesses/Packages/manifest.json
@@ -9,13 +9,17 @@
     }
   ],
   "dependencies": {
-    "jp.hadashikick.vcontainer": "1.11.1",
+    "com.unity.addressables": "1.19.19",
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.ide.rider": "3.0.16",
+    "com.unity.inputsystem": "1.4.4",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "12.1.7",
+    "jp.hadashikick.vcontainer": "1.11.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
