--- a/Save Those Princesses/Assets/SaveThosePrincesses/Code/Infrastructure/SaveThosePrincesses.Infrastructure.asmdef
+++ b/Save Those Princesses/Assets/SaveThosePrincesses/Code/Infrastructure/SaveThosePrincesses.Infrastructure.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "SaveThosePrincesses.ApplicationLifecycle",
-    "rootNamespace": "SaveThosePrincesses.ApplicationLifecycle",
+    "name": "SaveThosePrincesses.Infrastructure",
+    "rootNamespace": "SaveThosePrincesses.Infrastructure",
     "references": [
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:85ce21181b3cf5f48ba6fcf696c46d69"
+        "GUID:9e24947de15b9834991c9d8411ea37cf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
